adapter/resources/k8s-artifacts/choreo-connect/choreo-connect-deployment.yaml
# --------------------------------------------------------------------
# Copyright (c) 2020, WSO2 Inc. (http://wso2.com) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# -----------------------------------------------------------------------

# Deployment for router and enforcer

apiVersion: apps/v1
kind: Deployment
metadata:
  name: choreo-connect-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: choreo-connect-deployment
  template:
    metadata:
      labels:
        app: choreo-connect-deployment
    spec:
      containers:
        - name: choreo-connect-enforcer
          volumeMounts:
            - mountPath: /home/wso2/security/truststore
              name: enforcer-truststore-vol
            - mountPath: /home/wso2/security/keystore
              name: enforcer-keystore-vol
            - mountPath: /home/wso2/conf/log4j2.properties
              subPath: log4j2.properties
              name: log4j2-vol
          image: wso2/choreo-connect-enforcer:1.1.0-ubuntu
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "1000Mi"
              cpu: "1000m"
            limits:
              memory: "1000Mi"
              cpu: "1000m"
          ports:
            - containerPort: 8081
            - containerPort: 9001
#          startupProbe:
#            exec:
#              command: [ "sh", "check_health.sh" ]
#            periodSeconds: 5
#            failureThreshold: 30
#          livenessProbe:
#            exec:
#              command: [ "sh", "check_health.sh" ]
#            initialDelaySeconds: 5
#            periodSeconds: 30
#          readinessProbe:
#            exec:
#              command: [ "sh", "check_health.sh" ]
#            initialDelaySeconds: 5
#            periodSeconds: 5
        - name: choreo-connect-router
          volumeMounts:
            - mountPath: /home/wso2/security/keystore
              name: router-keystore-vol
            - mountPath: /home/wso2/security/truststore
              name: router-truststore-vol
          image: wso2/choreo-connect-router:1.2.0-m1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "500Mi"
              cpu: "1000m"
            limits:
              memory: "1000Mi"
              cpu: "1000m"
          ports:
            - containerPort: 9000
            - containerPort: 9095
#          startupProbe:
#            httpGet:
#              port: 9095
#              path: /ready
#              scheme: HTTPS
#              httpHeaders:
#                - name: Host
#                  value: gw.wso2.com
#            failureThreshold: 30
#            periodSeconds: 5
#          livenessProbe:
#            httpGet:
#              port: 9095
#              path: /health
#              scheme: HTTPS
#              httpHeaders:
#                - name: Host
#                  value: gw.wso2.com
#            periodSeconds: 10
#          readinessProbe:
#            httpGet:
#              port: 9095
#              path: /ready
#              scheme: HTTPS
#              httpHeaders:
#                - name: Host
#                  value: gw.wso2.com
#            periodSeconds: 5
      volumes:
        - name: router-keystore-vol
          secret:
            secretName: router-keystore
        - name: router-truststore-vol
          secret:
            secretName: router-truststore
        - name: enforcer-truststore-vol
          secret:
            secretName: enforcer-truststore
        - name: enforcer-keystore-vol
          secret:
            secretName: enforcer-keystore
        - name: config-toml-vol
          configMap:
            name: config-toml
        - name: log4j2-vol
          configMap:
            name: log4j2
        - name: logconfig-toml-vol
          configMap:
            name: logconfig-toml
      restartPolicy: Always
