adapter/resources/k8s-artifacts/choreo-connect/choreo-connect-service.yaml
# --------------------------------------------------------------------
# Copyright (c) 2022, WSO2 LLC. (http://wso2.com) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# -----------------------------------------------------------------------

# service for router

apiVersion: v1
kind: Service
metadata:
  labels:
    app: choreo-connect-deployment
  name: router
spec:
  type: ClusterIP
  selector:
    app: choreo-connect-deployment
  ports:
    - name: "http-routeradmin"
      port: 9000
      targetPort: 9000
      protocol: TCP
    - name: "https-router"
      port: 9095
      targetPort: 9095
      protocol: TCP
